--- a/appspec.yml
+++ b/appspec.yml
@@ -2,13 +2,14 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/flask-app
+    destination: /home/ubuntu/app
 hooks:
-  ApplicationStart:
-    - location: scripts/start_server.sh
-      timeout: 300
-      runas: ubuntu
   ApplicationStop:
     - location: scripts/stop_server.sh
       timeout: 300
       runas: ubuntu
+  ApplicationStart:
+    - location: scripts/start_server.sh
+      timeout: 300
+      runas: ubuntu
+
