--- a/appspec.yml
+++ b/appspec.yml
@@ -3,11 +3,11 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/app
+permissions:
+  - object: /home/ubuntu/app
+    owner: ubuntu
+    group: ubuntu
 hooks:
-  ApplicationStop:
-    - location: scripts/stop_server.sh
-      timeout: 300
-      runas: ubuntu
   ApplicationStart:
     - location: scripts/start_server.sh
       timeout: 300
